--- a/GB/Views/Shared/_LayoutAuthentication.cshtml
+++ b/GB/Views/Shared/_LayoutAuthentication.cshtml
@@ -65,6 +65,8 @@
     <!-- Script de la page -->
     <script src="@Url.Content("~/Resources/js/Views/" + ViewBag.Id_page + ".js")" type="text/javascript"></script>
 
+    @RenderSection("scripts", required: false)
+
 </body>
 
 </html>
