--- a/GB/Views/Shared/_Modals.cshtml
+++ b/GB/Views/Shared/_Modals.cshtml
@@ -25,7 +25,7 @@
                 <!-- ./Message -->
             </div>
             <div class="modal-footer">
-                <button id="modal_message_btn_fermer" type="button" class="btn btn-sm btn-light float-left" data-dismiss="modal">
+                <button id="modal_message_btn_fermer" type="button" class="btn btn-sm btn-light pull-right" data-dismiss="modal">
                     <i class="glyphicon glyphicon-remove"></i> Fermer
                 </button>
             </div>
