--- a/GB/Views/Shared/_LayoutAuthentication.cshtml
+++ b/GB/Views/Shared/_LayoutAuthentication.cshtml
@@ -21,8 +21,6 @@
     <link href="@Url.Content("~/Plugins/font-awesome/css/font-awesome.min.css")" rel="stylesheet" />
     <!-- NProgress -->
     <link href="@Url.Content("~/Plugins/nprogress/nprogress.css")" rel="stylesheet" />
-    <!-- iCheck -->
-    <link href="@Url.Content("~/Plugins/iCheck/skins/flat/blue.css")" rel="stylesheet" />
     <!-- parsley -->
     <link href="@Url.Content("~/Plugins/parsley/gb.parsley.css")" rel="stylesheet" />
     <!-- Custom Theme Style -->
@@ -34,9 +32,9 @@
 
 </head>
 
-<body class="dg-body_auth">
+<body class="dg-body_auth login">
 
-    <div class="container">
+    <div class="login_wrapper">
 
         @RenderBody()
 
@@ -52,19 +50,14 @@
     <script src="@Url.Content("~/Resources/js/jquery-2.2.4.min.js")" type="text/javascript"></script>
     <!-- Boostrap -->
     <script src="@Url.Content("~/Resources/js/bootstrap.min.js")" type="text/javascript"></script>
-    <!-- icheck -->
-    <script src="@Url.Content("~/Plugins/iCheck/icheck.min.js")" type="text/javascript"></script>
     <!-- form validation -->
     <script src="@Url.Content("~/Plugins/parsley/parsley.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Plugins/parsley/i18n/" + (ViewBag.Lang.code == "en-US" ? "en" : "fr") + ".js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Plugins/parsley/gb.parsley.js")" type="text/javascript"></script>
     <!-- NProgress -->
     <script src="@Url.Content("~/Plugins/nprogress/nprogress.js")" type="text/javascript"></script>
-    
     <!-- Custom Theme Scripts -->
     <script src="@Url.Content("~/Resources/js/custom.js")" type="text/javascript"></script>
-    <!-- CryptoJS -->
-    <script src="@Url.Content("~/Plugins/CryptoJS/CryptoJS.js")" type="text/javascript"></script>
     <!-- gb.script.js -->
     <script src="@Url.Content("~/Resources/js/gb.script.js")" type="text/javascript"></script>
     <!-- Script de la page -->
