--- a/GB/Resources/css/Views/Home-Authentication.css
+++ b/GB/Resources/css/Views/Home-Authentication.css
@@ -1,27 +1,9 @@
 
-#compte:focus, 
-#mot_de_passe:focus, 
-#langue:focus {
-
-    text-transform: uppercase;
-    font-weight: bold;
-    color: #495057;
-    background-color: #fff;
-    border-color: #26b99a;
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(38, 185, 154, 0.25);
-    border-width: 3px;
-    border-radius: 5px;
-    font-size: 16px;
-    height: 40px;
-
-}
-
 .dg-body_auth {
     font-family: Titilium web; background-color: #F7F7F7;
-    background-image: url(../../images/png/Grey.png);
-    /*background-color: lightgrey;*/
-    background-attachment: scroll;
+    background-image: url(../../images/png/bg_grey.png);
+    background-size: 100%;
+    background-attachment: fixed;
 }
 
 /* Cookie notification */
