--- a/GB/Views/Application/Main.cshtml
+++ b/GB/Views/Application/Main.cshtml
@@ -11,15 +11,7 @@
     @Html.Partial("Main/_Header")
 
     <!-- page content -->
-    <div class="right_col" role="main">
-        <div class="">
-            <div class="page-title">
-                <div class="title_left">
-                    <h3>Application</h3>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="right_col" role="main" id="conteneur"></div>
 
     <!-- Footer -->
     @Html.Partial("../Shared/_Footer")
