--- a/GB/Views/Erreur/Page.cshtml
+++ b/GB/Views/Erreur/Page.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_LayoutErreur.cshtml";
+    Layout = null;
 }
 
 <div class="main_container">
@@ -8,7 +8,7 @@
 
         <div class="col-middle">
 
-            <div class="text-center text-center">
+            <div class="text-center">
 
                 <h1 class="error-number">
                     @ViewBag.code
@@ -21,18 +21,6 @@
                 <p>
                     @ViewBag.description
                 </p>
-
-                <div class="mid_center">
-
-                    <div class="col-lg-12 text-center">
-
-                        <a class="btn btn-lg btn-default" href="@ViewBag.url">
-                            <i class="fa fa-sign-in"></i> @ViewBag.Lang.Reconnect
-                        </a>
-
-                    </div>
-
-                </div>
 
             </div>
 
