- Intégration du CRUD sur le menu module - Mise à jour version - Suppression de la barre de chargement verte - Intégration d'un frame de chargement - Mise à jour des Styles - Désactiver les notifications cookies - Ajout de la nouvelle variable de configuration DUREE_VISIBILITE_MESSAGE_BOX

--- a/GB/Resources/css/gb.style.css
+++ b/GB/Resources/css/gb.style.css
@@ -280,7 +280,7 @@
 
 
 /********* Texte en gras *********/
-.itext-bold{
+.gbtext-bold{
     font-weight:bold;
 }
 .itext-italic{
@@ -381,7 +381,7 @@ body {
     padding: 10px;
 }
 
-.ialert {
+.gbalert {
     padding: 10px;
     border: 1px solid transparent;
     border-radius: 4px;
@@ -418,4 +418,8 @@ body {
 
     color: #333;
 
+}
+
+.close {
+    opacity: 1;
 }
