--- a/GB/Views/Shared/_LayoutApplication.cshtml
+++ b/GB/Views/Shared/_LayoutApplication.cshtml
@@ -20,7 +20,7 @@
     <!-- Font Awesome -->
     <link href="@Url.Content("~/Plugins/font-awesome/css/font-awesome.min.css")" rel="stylesheet" />
     <!-- NProgress -->
-    <link href="@Url.Content("~/Plugins/nprogress/nprogress.css")" rel="stylesheet" />
+    @*<link href="@Url.Content("~/Plugins/nprogress/nprogress.css")" rel="stylesheet" />*@
     <!-- jQuery custom content scroller -->
     <link href="@Url.Content("~/Plugins/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css")" rel="stylesheet" />
     <!-- iCheck -->
@@ -58,7 +58,7 @@
     <!-- FastClick -->
     <script src="@Url.Content("~/Plugins/fastclick/lib/fastclick.js")" type="text/javascript"></script>
     <!-- NProgress -->
-    <script src="@Url.Content("~/Plugins/nprogress/nprogress.js")" type="text/javascript"></script>
+    @*<script src="@Url.Content("~/Plugins/nprogress/nprogress.js")" type="text/javascript"></script>*@
     <!-- jQuery custom content scroller -->
     <script src="@Url.Content("~/Plugins/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js")" type="text/javascript"></script>
     <!-- datatables -->
