--- a/GB/Views/Shared/_LayoutAuthentication.cshtml
+++ b/GB/Views/Shared/_LayoutAuthentication.cshtml
@@ -20,7 +20,7 @@
     <!-- Font Awesome -->
     <link href="@Url.Content("~/Plugins/font-awesome/css/font-awesome.min.css")" rel="stylesheet" />
     <!-- NProgress -->
-    <link href="@Url.Content("~/Plugins/nprogress/nprogress.css")" rel="stylesheet" />
+    @*<link href="@Url.Content("~/Plugins/nprogress/nprogress.css")" rel="stylesheet" />*@
     <!-- parsley -->
     <link href="@Url.Content("~/Plugins/parsley/gb.parsley.css")" rel="stylesheet" />
     <!-- Custom Theme Style -->
@@ -55,11 +55,15 @@
     <script src="@Url.Content("~/Plugins/parsley/i18n/" + (ViewBag.Lang.code == "en-US" ? "en" : "fr") + ".js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Plugins/parsley/gb.parsley.js")" type="text/javascript"></script>
     <!-- NProgress -->
-    <script src="@Url.Content("~/Plugins/nprogress/nprogress.js")" type="text/javascript"></script>
+    @*<script src="@Url.Content("~/Plugins/nprogress/nprogress.js")" type="text/javascript"></script>*@
     <!-- Custom Theme Scripts -->
     <script src="@Url.Content("~/Resources/js/custom.js")" type="text/javascript"></script>
     <!-- gb.script.js -->
     <script src="@Url.Content("~/Resources/js/gb.script.js")" type="text/javascript"></script>
+    <script type="text/javascript">
+        // -- Réccupérer les données à exploiter dans les script du main -- //
+        $GB_DONNEE_PARAMETRES = JSON.parse('@Html.Raw(ViewBag.GB_DONNEE)');
+    </script>
     <!-- Script de la page -->
     <script src="@Url.Content("~/Resources/js/Views/" + ViewBag.Id_page + ".js")" type="text/javascript"></script>
 
