--- a/GB/Views/Securite/Module.cshtml
+++ b/GB/Views/Securite/Module.cshtml
@@ -4,7 +4,7 @@
 
 <script type="text/javascript">
 
-    $GB_DONNEE = JSON.parse('@Html.Raw(ViewBag.GB_DONNEE)'); 
+    $GB_DONNEE = JSON.parse('@Html.Raw(ViewBag.GB_DONNEE)');  
 
 </script>
 
@@ -64,37 +64,33 @@
             <div class="x_content">
 
                 <!-- Table des données -->
-                <div>
+                <h4 class="hidden-xs">
+                    <i class="fa fa-reorder"></i> @ViewBag.Lang.List_of_records
+                </h4>
 
-                    <h4 class="hidden-xs">
-                        <i class="fa fa-reorder"></i> @ViewBag.Lang.List_of_records
-                    </h4>
+                <table id="table-donnee" class="table table-striped table-condensed jambo_table bulk_action dt-responsive nowrap" cellspacing="0" width="100%;">
 
-                    <table id="table-donnee" class="table table-striped table-condensed jambo_table bulk_action dt-responsive nowrap table-iroll-0" cellspacing="0" width="100%;">
+                    <thead class="headings">
+                        <tr>
+                            <th width="20px">
+                                <input type="checkbox" id="check-all" class="flat">
+                            </th>
+                            <th class="column-title">Id</th>
+                            <th class="column-title">Code</th>
+                            <th class="column-title">@ViewBag.Lang.Name_french</th>
+                            <th class="column-title">@ViewBag.Lang.Name_english</th>
+                            <th class="column-title last" width="50px">Action</th>
+                            <th class="bulk-actions" colspan="5">
+                                <a class="antoo" style="color:#fff; font-weight:500;">
+                                    Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
+                                </a>
+                            </th>
+                        </tr>
+                    </thead>
 
-                        <thead class="headings">
-                            <tr>
-                                <th width="20px">
-                                    <input type="checkbox" id="check-all" class="flat">
-                                </th>
-                                <th class="column-title">Id</th>
-                                <th class="column-title">Code</th>
-                                <th class="column-title">@ViewBag.Lang.Name_french</th>
-                                <th class="column-title">@ViewBag.Lang.Name_english</th>
-                                <th class="column-title last" width="50px">Action</th>
-                                <th class="bulk-actions" colspan="5">
-                                    <a class="antoo" style="color:#fff; font-weight:500;">
-                                        Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
-                                    </a>
-                                </th>
-                            </tr>
-                        </thead>
+                    <tbody></tbody>
 
-                        <tbody></tbody>
-
-                    </table>
-
-                </div>
+                </table>
 
             </div>
 
