- Supression du bouton de modification de ligne - Définition de la selection de la ligne - Suppression du striped sur la table - Correction du bug d'afficharge de l'alert de confirmation - Mise à jour version d'application

--- a/GB/Resources/css/gb.style.css
+++ b/GB/Resources/css/gb.style.css
@@ -423,3 +423,15 @@ body {
 .close {
     opacity: 1;
 }
+
+.gb-table-success {
+
+    background: #26B99A;
+    color: white;
+    font-weight: bold;
+
+}
+
+tr {
+    cursor:pointer;
+}
