--- a/GB/Resources/css/custom.css
+++ b/GB/Resources/css/custom.css
@@ -1306,7 +1306,8 @@ table.jambo_table tbody tr:hover td {
     border-bottom: 1px solid rgba(38, 185, 154, 0.11)
 }
 table.jambo_table tbody tr.selected {
-    background: rgba(38, 185, 154, 0.16)
+    background: rgba(38, 185, 154, 0.16);
+    color: #73879C;
 }
 table.jambo_table tbody tr.selected td {
     border-top: 1px solid rgba(38, 185, 154, 0.4);
