--- a/GB/Views/Securite/Module.cshtml
+++ b/GB/Views/Securite/Module.cshtml
@@ -68,19 +68,18 @@
                     <i class="fa fa-reorder"></i> @ViewBag.Lang.List_of_records
                 </h4>
 
-                <table id="table-donnee" class="table table-striped table-condensed jambo_table bulk_action dt-responsive nowrap" cellspacing="0" width="100%;">
+                <table id="table-donnee" class="table table-condensed jambo_table bulk_action dt-responsive nowrap" cellspacing="0" width="100%;">
 
                     <thead class="headings">
                         <tr>
                             <th width="20px">
                                 <input type="checkbox" id="check-all" class="flat">
                             </th>
-                            <th class="column-title">Id</th>
                             <th class="column-title">Code</th>
                             <th class="column-title">@ViewBag.Lang.Name_french</th>
                             <th class="column-title">@ViewBag.Lang.Name_english</th>
                             <th class="column-title last" width="50px">Action</th>
-                            <th class="bulk-actions" colspan="5">
+                            <th class="bulk-actions" colspan="4">
                                 <a class="antoo" style="color:#fff; font-weight:500;">
                                     Selection(s) ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i>
                                 </a>
