- Intégration du menu 'menu' - Mise à jour de l'entête utilisateur. - Mise à jour version d'application.

--- a/GB/Views/Securite/Menu.cshtml
+++ b/GB/Views/Securite/Menu.cshtml
@@ -59,7 +59,7 @@
             </div>
 
             <!-- Formulaire modals -->
-            @Html.Partial("Role/_Modals")
+            @Html.Partial("Menu/_Modals")
 
             <div class="x_content">
 
